fix effective date

--- a/docs/wallet/pricing.mdx
+++ b/docs/wallet/pricing.mdx
@@ -11,7 +11,7 @@ import WhyChoose from '/src/components/WhyChoose';
 import CTASection from '/src/components/CTASection';
 
 :::note Effective April 1, 2026
-The pricing below applies starting **April 1, 2026**. Existing accounts will be notified before any changes take effect.
+The pricing below applies starting on your next billing cycle. Existing accounts will be notified before any changes take effect.
 :::
 
 # The Fastest Path to Production.
